--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -167,7 +167,7 @@ QuotedSOldLeads As screen:
                 BorderColor: =RGBA(219, 219, 219, 1)
                 BorderThickness: =2
                 DelayItemLoading: =true
-                Height: =Parent.Height-ctnSearchBarSLS_4.Height-ctnSearchBarSoldLeads.Height
+                Height: =Parent.Height-ctnSearchBarSLS_4.Height-ctnSortBarSoldLeads.Height
                 Items: |+
                     =If(
                         cumulatively = true,
@@ -199,7 +199,7 @@ QuotedSOldLeads As screen:
                 TemplateSize: =Min(1000, Self.Height - 20)
                 Width: =Parent.Width/1.02
                 X: =10
-                Y: =ctnSearchBarSoldLeads.Y+ctnSearchBarSoldLeads.Height+10
+                Y: =ctnSortBarSoldLeads.Y+ctnSortBarSoldLeads.Height+10
                 ZIndex: =1
 
                 lblLeadYearSLS_2 As label:
@@ -872,7 +872,7 @@ QuotedSOldLeads As screen:
                     Y: =000
                     ZIndex: =2
 
-            ctnSearchBarSoldLeads As groupContainer.horizontalAutoLayoutContainer:
+            ctnSortBarSoldLeads As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
