--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -220,7 +220,7 @@ QuotedSOldLeads As screen:
                         =ThisItem.IsSelected && locInfoExpanded  
                     Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                     X: =1
-                    Y: =rectangleYearSLS_2.Height
+                    Y: =rectangleYearSL.Height
                     ZIndex: =2
 
                     borderLeadsSLS_2 As rectangle:
@@ -533,7 +533,7 @@ QuotedSOldLeads As screen:
                         Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
                         Width: =Parent.Width/1.06
                         X: =20
-                        Y: =lblTotalIncentivesSLS_2.Height+lblTotalIncentivesSLS_2.Y
+                        Y: =lblTotalIncentivesSL.Height+lblTotalIncentivesSL.Y
                         ZIndex: =17
 
                     lblPriceSLS_5 As label:
@@ -626,7 +626,7 @@ QuotedSOldLeads As screen:
                         "Year"
                     Width: =Parent.Width/8
                     X: =1
-                    Y: =2*(btnLeadsSLS_2.Y)
+                    Y: =2*(btnLeadsSL.Y)
                     ZIndex: =3
 
                 lblCountTotalLeadsSLS_2 As label:
@@ -648,12 +648,12 @@ QuotedSOldLeads As screen:
                           //  LookUp(GCTotalIncentives,Year=Text(Year(Now())) &&  TechnicianID=VarTechnicianID.'Personnel No',TotalProposedLead,
                         If( Header="Quoted",ThisItem.TotalProposedLead,ThisItem.TotalSoldLead)
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =lblTotalLeadsSLS_2.Width
-                    X: =lblTotalLeadsSLS_2.X
-                    Y: =lblTotalLeadsSLS_2.Y+lblTotalLeadsSLS_2.Height+10
+                    Width: =lblTotalLeadsSL.Width
+                    X: =lblTotalLeadsSL.X
+                    Y: =lblTotalLeadsSL.Y+lblTotalLeadsSL.Height+10
                     ZIndex: =4
 
-                lblTotalLeadsSLS_2 As label:
+                lblTotalLeadsSL As label:
                     Align: =Align.Center
                     AutoHeight: =true
                     Font: =Font.Arial
@@ -667,16 +667,14 @@ QuotedSOldLeads As screen:
                     PaddingRight: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
-                    Text: |-
-                        =//ThisItem.Value\
-                        "Total Leads"
+                    Text: ="Total Leads"
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width/3.3
                     X: =lblLeadYearSLS_2.Width+lblLeadYearSLS_2.X
-                    Y: =2*(btnLeadsSLS_2.Y)
+                    Y: =2*(btnLeadsSL.Y)
                     ZIndex: =5
 
-                lblCountTotalIncentivesSLS_2 As label:
+                lblCountTotalIncentivesSL As label:
                     Align: =Align.Center
                     Color: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
@@ -689,24 +687,16 @@ QuotedSOldLeads As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
                     Text: |-
-                        =/*If(btnheaderSLS_2.Text="Quoted Leads",Value(Sum(
-                            Filter(
-                                GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' &&
-                                Year(Year) = Year(Now())),TotalproposedIncentives
-                        )),Value(Sum(
-                            Filter(
-                                GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' &&
-                                Year(Year) = Year(Now())),TotalSoldIncentives
-                        )))*/ "$ " &
+                        = "$ " &
                         If(Header="Quoted",If(!IsBlank(ThisItem.TotalproposedIncentives),Text(ThisItem.TotalproposedIncentives,"0.00"),0.00),If(!IsBlank(ThisItem.TotalSoldIncentives),Text(ThisItem.TotalSoldIncentives,"0.00"),0.00))
                     VerticalAlign: =VerticalAlign.Top
                     Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
                     Width: =Parent.Width/3
-                    X: =lblTotalLeadsSLS_2.Width+lblTotalLeadsSLS_2.X
-                    Y: =lblTotalIncentivesSLS_2.Y+lblTotalIncentivesSLS_2.Height+10
+                    X: =lblTotalLeadsSL.Width+lblTotalLeadsSL.X
+                    Y: =lblTotalIncentivesSL.Y+lblTotalIncentivesSL.Height+10
                     ZIndex: =6
 
-                lblTotalIncentivesSLS_2 As label:
+                lblTotalIncentivesSL As label:
                     Align: =Align.Center
                     AutoHeight: =true
                     Font: =Font.Arial
@@ -717,17 +707,15 @@ QuotedSOldLeads As screen:
                     PaddingRight: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
-                    Text: |-
-                        =//ThisItem.Value\
-                        "Total Incentive"
+                    Text: ="Total Incentive"
                     VerticalAlign: =VerticalAlign.Top
                     Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||btnheaderSoldLeads.Text="Sold Leads",true,false)
                     Width: =Parent.Width/3
-                    X: =lblTotalLeadsSLS_2.X+lblTotalLeadsSLS_2.Width
-                    Y: =2*(btnLeadsSLS_2.Y)
+                    X: =lblTotalLeadsSL.X+lblTotalLeadsSL.Width
+                    Y: =2*(btnLeadsSL.Y)
                     ZIndex: =7
 
-                rectangleYearSLS_2 As rectangle:
+                rectangleYearSL As rectangle:
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =1
                     Fill: =RGBA(0, 0, 0, 0)
@@ -739,30 +727,30 @@ QuotedSOldLeads As screen:
                     Y: =1
                     ZIndex: =8
 
-                iconLine1LSLS_2 As icon.HorizontalLine:
+                iconLine1LSL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     Fill: =RGBA(202, 202, 202, 1)
                     FocusedBorderThickness: =0
-                    Height: =rectangleYearSLS_2.Height/2
+                    Height: =rectangleYearSL.Height/2
                     Icon: =Icon.VerticalLine
                     OnSelect: =Select(Parent)
                     Width: =1
-                    Y: =rectangleYearSLS_2.Y*20
+                    Y: =rectangleYearSL.Y*20
                     ZIndex: =10
 
-                iconLine2SLS_2 As icon.HorizontalLine:
+                iconLine2SL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     Fill: =RGBA(202, 202, 202, 1)
                     FocusedBorderThickness: =0
-                    Height: =rectangleYearSLS_2.Height/2
+                    Height: =rectangleYearSL.Height/2
                     Icon: =Icon.VerticalLine
                     OnSelect: =Select(Parent)
                     Visible: =If(btnheaderSoldLeads.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =1
-                    Y: =rectangleYearSLS_2.Y*20
+                    Y: =rectangleYearSL.Y*20
                     ZIndex: =11
 
-                btnLeadsSLS_2 As button:
+                btnLeadsSL As button:
                     BorderColor: =RGBA(237, 237, 237, 1)
                     BorderThickness: =4
                     DisabledBorderColor: =RGBA(237, 237, 237, 1)
@@ -778,27 +766,27 @@ QuotedSOldLeads As screen:
                     Y: =10
                     ZIndex: =12
 
-                imgExpandSLS_2 As image:
-                    Height: =rectangleYearSLS_2.Height/1.2
+                imgExpandSL As image:
+                    Height: =rectangleYearSL.Height/1.2
                     Image: =accordianPlus
                     OnSelect: |
                         =UpdateContext({locInfoExpanded:true});Set(Vardown,Year(ThisItem.Year));
                     Visible: |
                         =!(ThisItem.IsSelected && locInfoExpanded)
                     Width: =Parent.Width/14
-                    X: =rectangleYearSLS_2.Width -(1.08*Self.Width)
+                    X: =rectangleYearSL.Width -(1.08*Self.Width)
                     Y: =(Parent.Y-Self.Height)/8
                     ZIndex: =13
 
-                imgCollapseSLS_2 As image:
-                    Height: =rectangleYearSLS_2.Height/1.2
+                imgCollapseSL As image:
+                    Height: =rectangleYearSL.Height/1.2
                     Image: =accordianMinus
                     OnSelect: |-
                         =Select(Parent); UpdateContext({locInfoExpanded:false}) ;Set(VarNavigateId,Blank());
                     Visible: |
                         =ThisItem.IsSelected && locInfoExpanded
                     Width: =Parent.Width/14
-                    X: =rectangleYearSLS_2.Width -(1.08*Self.Width)
+                    X: =rectangleYearSL.Width -(1.08*Self.Width)
                     Y: =(Parent.Y-Self.Height)/8
                     ZIndex: =14
 
